# SOTERonROS

./: CMakeLists.txt  README  README.md  package.xml
P/Bld/Drops/Prt/include/: PrtConfig.h
P/Bld/Drops/Release/Binaries/: CompilerCore.deps.json  Pc.runtimeconfig.dev.json
P/Bld/Drops/Release/Binaries/publish/: Pc.deps.json  Pc.dll.config
PSrc/: CMakeLists.txt
PSrc/RobotSDK/: RobotFuncs.cpp  RobotFuncsAdv.cpp  RobotFuncsAdv.h  RobotFuncsDrone.cpp
